<resources>
    <string name="app_name">CashParty</string>
    <string name="text_name_friend">Nome Amigo</string>
    <string name="text_sex_friend">Sexo</string>
    <string name="text_cash_friend">Cash</string>
    <string name="friend_name">Nome</string>
    <string name="friend_sex">Sexo</string>
    <string name="sex_male">Masculino</string>
    <string name="sex_female">Feminino</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="title_event">Eventos</string>
    <string name="title_friend">Amigos</string>
    <string name="title_cash">Caixa</string>
</resources>
