<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friend_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtFriendName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friend_sex"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <RadioGroup
                android:id="@+id/rgSexFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbSexMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sex_male"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rbSexFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_female"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/btn_cancel" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/btn_confirm" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>