<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/llFriendItem"
    android:layout_marginTop="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtNmAmigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_name_friend"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:weightSum="3">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtSexAmigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/text_sex_friend"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtCashAmigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_cash_friend"
                    android:gravity="end"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#1F000000"
            android:layout_margin="4dp">

        </View>

    </LinearLayout>

</LinearLayout>