<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:weightSum="10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="9">

            <android.support.v7.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/ic_menu_settings"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="32dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:text="@string/app_name"
                android:textColor="@android:color/white"/>

            <android.support.v7.widget.CardView
                android:layout_margin="24dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_margin="32dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:text="Sem Evento"
                        android:textColor="@android:color/white"/>


                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:baselineAligned="false"
            android:layout_weight="1"
            android:weightSum="3"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/llBtnEvent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:gravity="center"
                android:background="@drawable/layout_btn_main"
                android:weightSum="2">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|bottom"
                    android:src="@drawable/ic_menu_event"
                    android:layout_weight="1"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_event"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBtnFriend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/layout_btn_main"
                android:weightSum="2">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|bottom"
                    android:src="@drawable/ic_menu_friends"
                    android:layout_weight="1"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_friend"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBtnCash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/layout_btn_main"
                android:weightSum="2">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|bottom"
                    android:src="@drawable/ic_menu_money"
                    android:layout_weight="1"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_cash"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
